--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -19,7 +19,7 @@ jobs:
         id: add-version-tag
         uses: shrink/actions-docker-registry-tag@v3
         with:
-          registry: azusctracr.azurecr.io
+          registry: prachiacr.azurecr.io
           repository: '${{ github.repository }}'
           tags: '${{ steps.version.outputs.version }}'
 
