--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -18,4 +18,4 @@ spec:
         - name: main-deploy
           ports:
             - containerPort: 8080
-          image: prachiacr.azurecr.io/payment:main_v1.0.1
+          image: prachiacr.azurecr.io/payment:v1.0.1
