--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -17,7 +17,7 @@ jobs:
         uses: battila7/get-version-action@v2
       - name: Add Semantic Version tag to Docker Image
         id: add-version-tag
-        uses: shrink/actions-docker-registry-tag@v3.0.0
+        uses: shrink/actions-docker-registry-tag@57e97909852876c02080eff4d73b2e5e779b845b
         with:
           registry: prachiacr.azurecr.io
           repository: payment
