--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -10,22 +10,20 @@ env:
   IMAGE_NAME: payment
 
 jobs:
-  release:
+  pre-commit:
     runs-on: [self-hosted, Linux, X64, orgrunner]
-    concurrency: release
-    permissions:
-      id-token: write
-      contents: write
 
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    - uses: actions/setup-python@v3
+    - uses: pre-commit/action@v3.0.0
 
-    - name: Python Semantic Release
-      uses: python-semantic-release/python-semantic-release@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+    # - name: Python Semantic Release
+    #   uses: python-semantic-release/python-semantic-release@master
+    #   with:
+    #     github_token: ${{ secrets.GITHUB_TOKEN }}
 
     # steps:
     #   - id: version
@@ -42,7 +40,7 @@ jobs:
   main-acr-actions:
     name: 'main-acr-actions'
     runs-on: [self-hosted, Linux, X64, orgrunner]
-    needs: release
+    needs: pre-commit
     defaults:
       run:
         shell: bash
