--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -1,4 +1,3 @@
-##commit
 name: main-acr-actions
 
 on:
@@ -11,37 +10,27 @@ env:
   IMAGE_NAME: payment
 
 jobs:
-  pre-commit:
+  release:
     runs-on: [self-hosted, Linux, X64, orgrunner]
+    concurrency: release
+    permissions:
+      id-token: write
+      contents: write
 
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - uses: actions/setup-python@v3
-    - uses: pre-commit/action@v3.0.0
 
-    # - name: Python Semantic Release
-    #   uses: python-semantic-release/python-semantic-release@master
-    #   with:
-    #     github_token: ${{ secrets.GITHUB_TOKEN }}
-
-    # steps:
-    #   - id: version
-    #     uses: battila7/get-version-action@v2
-    #   - name: Add Semantic Version tag to Docker Image
-    #     id: add-version-tag
-    #     uses: shrink/actions-docker-registry-tag@57e97909852876c02080eff4d73b2e5e779b845b
-    #     with:
-    #       registry: prachiacr.azurecr.io
-    #       repository: payment
-    #       tags: '${{ steps.version.outputs.version }}'
-    #       token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Python Semantic Release
+      uses: python-semantic-release/python-semantic-release@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
   main-acr-actions:
     name: 'main-acr-actions'
     runs-on: [self-hosted, Linux, X64, orgrunner]
-    needs: pre-commit
+    needs: release
     defaults:
       run:
         shell: bash
