--- a/.github/workflows/github-actions-test-cd.yml
+++ b/.github/workflows/github-actions-test-cd.yml
@@ -1,13 +1,9 @@
-name: Deploy to AKS Cluster
+name: payment-cd-github-actions-test
 on:
   workflow_dispatch:
-  # pull_request:
-  #   branches:
-  #   - main
-  # to set dependency, this workflow will run when "docker_build_push_acr" workflow is completed.
   workflow_run:
-    workflows: ["main-acr-actions"]
-    branches: [main]
+    workflows: ["payment-ci-github-actions-test"]
+    # branches: [github-actions-test]
     types: 
       - completed
 env:
@@ -15,34 +11,17 @@ env:
   AKSNAME: praks
 
 jobs:
-  deploy:
-    #runs-on: ubuntu-latest
+  payment-cd-github-actions-test:
     runs-on: [self-hosted, linux, X64, orgrunner]
-    #runs-on: [self-hosted, Windows, X64, mywinvm]
-    
     steps:
-    - uses: actions/checkout@master
-      with:
-        ref: main
-        submodules: true
-
-# This action is only supported in Linux runner
-    # - name: Update image tag for container test in deployment.yaml
-    #   uses: loveholidays/gitops-action-yaml-updater@v1.0
-    #   with:
-    #     mode: IMAGE_TAG
-    #     container-name: test
-    #     new-image-tag: ${{ env.TAG }}
-    #     #dir: manifests
-    #     filepath: manifests/deployment.yml
-    
-   # Set the target AKS cluster.
+  
+   # Checkout the branch
     - uses: actions/checkout@v2
       with:
         ref: main
         submodules: true
 
-       # Set the target AKS cluster.
+   # Set the target AKS cluster.
     - uses: Azure/aks-set-context@v1
       with:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
@@ -54,20 +33,19 @@ jobs:
       with:
         version: ' v1.28.2' # default is latest stable
       id: install
-
+    
+    # to access ACR from runner
     - uses: Azure/k8s-create-secret@v1
       with:
         container-registry-url: ${{ secrets.DOCKER_REGISTRY_URL }}
         container-registry-username: ${{ secrets.DOCKER_USERNAME }}
         container-registry-password: ${{ secrets.DOCKER_PASSWORD }}
         secret-name: k8s-secret
-
         
-    ##fullstack-app/kubernetes/deployment.yaml
-
+    ##to deploy on AKS
     - uses: Azure/k8s-deploy@v4
       with:
         action: deploy
         #private-cluster: true
         manifests: |
-          manifests/deployment.yml
+          manifests/gat/deployment.yml
